@@ -11,21 +11,24 @@ require_once( "LanguageUtf8.php" );
 #--------------------------------------------------------------------------
 
 /* private */ $wgNamespaceNamesTa = array(
-	NS_MEDIA          => "ஊடகம்",
-	NS_SPECIAL        => "சிறப்பு",
-	NS_MAIN           => "",
-	NS_TALK           => "பேச்சு",
-	NS_USER           => "பயனர்",
-	NS_USER_TALK      => "பயனர்_பேச்சு",
-	NS_PROJECT        => "விக்கிபீடியா",
-	NS_PROJECT_TALK   => "விக்கிபீடியா_பேச்சு",
-	NS_IMAGE          => "படிமம்",
-	NS_IMAGE_TALK     => "உருவப்_பேச்சு",
-	NS_MEDIAWIKI      => "மீடியாவிக்கி",
-	NS_MEDIAWIKI_TALK => "மீடியாவிக்கி_பேச்சு",
-	NS_TEMPLATE       => "Template",
-	NS_TEMPLATE_TALK  => "Template_talk"
-
+	NS_MEDIA          => 'ஊடகம்',
+	NS_SPECIAL        => 'சிறப்பு',
+	NS_MAIN           => '',
+	NS_TALK           => 'பேச்சு',
+	NS_USER           => 'பயனர்',
+	NS_USER_TALK      => 'பயனர்_பேச்சு',
+	NS_PROJECT        => $wgMetaNamespace,
+	NS_PROJECT_TALK   => $wgMetaNamespace . '_பேச்சு',
+	NS_IMAGE          => 'படிமம்',
+	NS_IMAGE_TALK     => 'உருவப்_பேச்சு',
+	NS_MEDIAWIKI      => 'மீடியாவிக்கி',
+	NS_MEDIAWIKI_TALK => 'மீடியாவிக்கி_பேச்சு',
+	NS_TEMPLATE       => 'வார்ப்புரு',
+	NS_TEMPLATE_TALK  => 'வார்ப்புரு_பேச்சு',
+	NS_HELP           => 'உதவி',
+	NS_HELP_TALK      => 'உதவி_பேச்சு',
+	NS_CATEGORY       => 'பகுப்பு',
+	NS_CATEGORY_TALK  => 'பகுப்பு_பேச்சு',
 ) + $wgNamespaceNamesEn;
 
 /* private */ $wgQuickbarSettingsTa = array(
